--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
 </head>
 
 <body class="position-relative d-lg-flex justify-content-center align-items-center flex-column py-5">
-
   <div class="dashboard container">
     <div class="row">
       <div class="dashboard-left col-lg-3">
@@ -39,7 +38,6 @@
       </div>
       <div class="dashboard-right col-lg-9 d-flex">
         <div class="row">
-
           <div class="card-container col-lg-4 mb-4 mb-lg-0">
             <div class="dashboard-right__card">
               <div class="card-decor position-relative">
@@ -66,7 +64,6 @@
               </div>
             </div>
           </div>
-
           <div class="card-container col-lg-4 mb-3 mb-lg-0">
             <div class="dashboard-right__card dashboard-right__card--play">
               <div class="card-decor position-relative">
@@ -93,7 +90,6 @@
               </div>
             </div>
           </div>
-
           <div class="card-container col-lg-4 mb-3 mb-lg-0">
             <div class="dashboard-right__card dashboard-right__card--study">
               <div class="card-decor position-relative">
@@ -120,7 +116,6 @@
               </div>
             </div>
           </div>
-
           <div class="card-container col-lg-4 align-self-end mb-3 mb-lg-0">
             <div class="dashboard-right__card dashboard-right__card--exercise">
               <div class="card-decor position-relative">
@@ -147,7 +142,6 @@
               </div>
             </div>
           </div>
-
           <div class="card-container col-lg-4 align-self-end mb-3 mb-lg-0">
             <div class="dashboard-right__card dashboard-right__card--social">
               <div class="card-decor position-relative">
@@ -175,7 +169,6 @@
               </div>
             </div>
           </div>
-
           <div class="card-container col-lg-4 align-self-end mb-3 mb-lg-0">
             <div class="dashboard-right__card dashboard-right__card--self-care">
               <div class="card-decor position-relative">
@@ -202,16 +195,12 @@
               </div>
             </div>
           </div>
-
         </div>
       </div>
     </div>
   </div>
 
-
-
-
-  <div class="attribution position-absolute bottom-0 py-2">
+  <div class="attribution position-absolute bottom-0 py-2 text-center">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
     Coded by <a href="https://github.com/jsabram" target="_blank">jsabram</a>.
   </div>
