attribution position adjusted, js code with json data created and finished

--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
           </div>
           <div
             class="dashboard-left__panel-bottom d-flex justify-content-around align-items-center align-items-lg-start flex-lg-column px-2 px-lg-4 py-4">
-            <p class="link mb-0 mb-lg-3">Daily</p>
-            <p class="link mb-0 mb-lg-3">Weekly</p>
-            <p class="link mb-0">Monthly</p>
+            <p class="link daily mb-0 mb-lg-3">Daily</p>
+            <p class="link weekly mb-0 mb-lg-3">Weekly</p>
+            <p class="link monthly mb-0">Monthly</p>
           </div>
         </div>
       </div>
@@ -58,8 +58,9 @@
                 </div>
                 <div
                   class="dashboard-right__card-bottom d-flex justify-content-between align-items-center align-items-lg-start flex-lg-column">
-                  <p class="display-6 mb-0 mb-lg-2 text-light"><span class="work-current-time">32</span>hrs</p>
-                  <p class="mb-0">Last Week - <span class="work-previous-time">32</span>hrs</p>
+                  <p class="display-6 mb-0 mb-lg-2 text-light"><span class="current-time">32</span>hrs</p>
+                  <p class="mb-0"><span class="comparison">Last Week</span> - <span class="previous-time">36</span>hrs
+                  </p>
                 </div>
               </div>
             </div>
@@ -84,8 +85,9 @@
                 </div>
                 <div
                   class="dashboard-right__card-bottom d-flex justify-content-between align-items-center align-items-lg-start flex-lg-column">
-                  <p class="display-6 mb-0 mb-lg-2 text-light"><span class="play-current-time">32</span>hrs</p>
-                  <p class="mb-0">Last Week - <span class="play-previous-time">32</span>hrs</p>
+                  <p class="display-6 mb-0 mb-lg-2 text-light"><span class="current-time">10</span>hrs</p>
+                  <p class="mb-0"><span class="comparison">Last Week</span> - <span class="previous-time">8</span>hrs
+                  </p>
                 </div>
               </div>
             </div>
@@ -110,8 +112,9 @@
                 </div>
                 <div
                   class="dashboard-right__card-bottom d-flex justify-content-between align-items-center align-items-lg-start flex-lg-column">
-                  <p class="display-6 mb-0 mb-lg-2 text-light"><span class="study-current-time">32</span>hrs</p>
-                  <p class="mb-0">Last Week - <span class="study-previous-time">32</span>hrs</p>
+                  <p class="display-6 mb-0 mb-lg-2 text-light"><span class="current-time">4</span>hrs</p>
+                  <p class="mb-0"><span class="comparison">Last Week</span> - <span class="previous-time">7</span>hrs
+                  </p>
                 </div>
               </div>
             </div>
@@ -136,8 +139,9 @@
                 </div>
                 <div
                   class="dashboard-right__card-bottom d-flex justify-content-between align-items-center align-items-lg-start flex-lg-column">
-                  <p class="display-6 mb-0 mb-lg-2 text-light"><span class="exercise-current-time">32</span>hrs</p>
-                  <p class="mb-0">Last Week - <span class="exercise-previous-time">32</span>hrs</p>
+                  <p class="display-6 mb-0 mb-lg-2 text-light"><span class="current-time">4</span>hrs</p>
+                  <p class="mb-0"><span class="comparison">Last Week</span> - <span class="previous-time">5</span>hrs
+                  </p>
                 </div>
               </div>
             </div>
@@ -163,8 +167,9 @@
                 </div>
                 <div
                   class="dashboard-right__card-bottom d-flex justify-content-between align-items-center align-items-lg-start flex-lg-column">
-                  <p class="display-6 mb-0 mb-lg-2 text-light"><span class="social-current-time">32</span>hrs</p>
-                  <p class="mb-0">Last Week - <span class="social-previous-time">32</span>hrs</p>
+                  <p class="display-6 mb-0 mb-lg-2 text-light"><span class="current-time">5</span>hrs</p>
+                  <p class="mb-0"><span class="comparison">Last Week</span> - <span class="previous-time">10</span>hrs
+                  </p>
                 </div>
               </div>
             </div>
@@ -189,8 +194,9 @@
                 </div>
                 <div
                   class="dashboard-right__card-bottom d-flex justify-content-between align-items-center align-items-lg-start flex-lg-column">
-                  <p class="display-6 mb-0 mb-lg-2 text-light"><span class="self-care-current-time">32</span>hrs</p>
-                  <p class="mb-0">Last Week - <span class="self-care-previous-time">32</span>hrs</p>
+                  <p class="display-6 mb-0 mb-lg-2 text-light"><span class="current-time">2</span>hrs</p>
+                  <p class="mb-0"><span class="comparison">Last Week</span> - <span class="previous-time">2</span>hrs
+                  </p>
                 </div>
               </div>
             </div>
